Cambio google-services.json

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "cat.copernic.fpshare"
+        applicationId "com.albert.fpshare"
         minSdk 21
         targetSdk 33
         versionCode 7
@@ -72,7 +72,6 @@ dependencies {
     implementation "com.dmitryborodin:pdfview-android:1.1.0"
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -125,3 +124,5 @@ android {
         baseline = file("lint-baseline.xml")
     }
 }
+
+
